# lametest

./: CMakeLists.txt  Doxyfile.in  Makefile  README.md  config.h  config.status  libtool  meson.build
ACM/: Makefile
ACM/ADbg/: Makefile
ACM/ddk/: Makefile
ACM/tinyxml/: Makefile
Dll/: Makefile
doc/: Makefile
doc/html/: Makefile
doc/man/: Makefile
dshow/: Makefile
frontend/: Makefile
include/: Makefile
libmp3lame/: Makefile
libmp3lame/.deps/: VbrTag.Plo  bitstream.Plo  encoder.Plo  fft.Plo  gain_analysis.Plo  id3tag.Plo  lame.Plo  mpglib_interface.Plo  newmdct.Plo  presets.Plo  psymodel.Plo  quantize.Plo  quantize_pvt.Plo  reservoir.Plo  set_get.Plo  tables.Plo  takehiro.Plo  util.Plo  vbrquantize.Plo  version.Plo
libmp3lame/.libs/: libmp3lame-0.dll.def  libmp3lame.exp  libmp3lame.filter
libmp3lame/i386/: Makefile
libmp3lame/vector/: Makefile
libmp3lame/vector/.deps/: xmm_quantize_sub.Plo
mac/: Makefile
macosx/: Makefile
macosx/English.lproj/: Makefile
macosx/LAME.xcodeproj/: Makefile
misc/: Makefile
mpglib/: Makefile
mpglib/.deps/: common.Plo  dct64_i386.Plo  decode_i386.Plo  interface.Plo  layer1.Plo  layer2.Plo  layer3.Plo  tabinit.Plo
vc_solution/: Makefile  UpgradeLog.htm  arch_nasm.props  arch_sse2.props  arch_x87.props  vc9_lame.sln  vc9_lame_config.props  vc9_lame_lame.vcxproj  vc9_lame_lame.vcxproj.filters  vc9_lame_mp3rtp.vcxproj  vc9_lame_mp3rtp.vcxproj.filters  vc9_lame_mp3x.vcxproj  vc9_lame_mp3x.vcxproj.filters  vc9_mpglib.vcxproj  vc9_mpglib.vcxproj.filters
